Fix General control buttons has wrong alignment on ios devices #51

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -114,10 +114,22 @@ body{
 }
 
 .control{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
     width: 50px;
     height: 50px;
     font-size: 1.5rem;
+    /*color: black;*/
+    /*text-align: center;*/
+    /*align-items: center;*/
 }
+
+/* adjustment */
+/*button > i{
+    text-align: center;
+    color:black;
+} */
 
 /* Square for each letter */
 .letter_square{
